i don't know why i use non-53 port on pihole-compose.yml

--- a/pihole-compoose.yml
+++ b/pihole-compoose.yml
@@ -5,9 +5,9 @@ services:
         container_name: pihole-chaitanya
         image: pihole/pihole:latest
         ports:
-            - 100:53/tcp
-            - 101:53/udp
-            - 8005:80/tcp
+            - 53:53/tcp
+            - 53:53/udp
+            - 8082:80/tcp
         environment:
             TZ: Asia/Kolkata
         volumes:
@@ -16,6 +16,8 @@ services:
         cap_add:
             - NET_ADMIN
         restart: unless-stopped
+        security_opt:
+            - label=disable
 
 # create dirs
-# mkdir -p /trayimurti/containers/volumes/pi-hole/{etc-pihole,etc-dnsmasq}
+# mkdir -vp /trayimurti/containers/volumes/pi-hole/{etc-pihole,etc-dnsmasq}
