--- a/pyload-ng-compose.yml
+++ b/pyload-ng-compose.yml
@@ -14,6 +14,8 @@ services:
         ports:
             - 8081:8000
         restart: unless-stopped
+        security_opt:
+            - label=disable
 
         # default uname:passwd => pyload:pyload
 
