--- a/gitea-compose.yml
+++ b/gitea-compose.yml
@@ -2,7 +2,7 @@ version: 3
 
 services:
     app:
-        image: gitea/gitea:latest
+        image: gitea/gitea:latest-rootless
         container_name: gitea-aatman
         restart: always
         ports:
