--- a/gitea-compose.yml
+++ b/gitea-compose.yml
@@ -2,7 +2,7 @@ version: 3
 
 services:
     app:
-        image: gitea/gitea:latest-rootless
+        image: gitea/gitea:latest
         container_name: gitea-aatman
         restart: always
         ports:
@@ -12,21 +12,22 @@ services:
             - /trayimurti/containers/volumes/gitea/root/data:/var/lib/gitea
             - /trayimurti/containers/volumes/gitea/root/config:/etc/gitea
 #            - /etc/timezone:/etc/timezone:ro
-#            - /etc/localtime:/etc/localtime:ro
+            - /etc/localtime:/etc/localtime:ro
         environment:
+            - ROOT_URL=http://0.pi:8081
             - GITEA__database__DB_TYPE=postgres
             - GITEA__database__HOST=db:5432
             - GITEA__database__NAME=gitea
             - GITEA__database__USER=gitea
-#            - GITEA__database__PASSWD=/run/secrets/postgres_user_passwd
-            - GITEA__database__PASSWD=gitea
+            - GITEA__database__PASSWD=/run/secrets/postgres_user_passwd
+#            - GITEA__database__PASSWD=gitea
             - TZ=Asia/Kolkata
         security_opt:
             - label=disable
         depends_on:
             - db
-#        secrets:
-#            - postgres_user_passwd
+        secrets:
+            - postgres_user_passwd
 
     db:
         image: postgres:alpine
@@ -36,18 +37,18 @@ services:
             - /trayimurti/containers/volumes/gitea/db:/var/lib/postgresql/data
         environment:
             - POSTGRES_USER=gitea
-#            - POSTGRES_PASSWORD=/run/secrets/postgres_user_passwd
-            - POSTGRES_PASSWORD=gitea
+            - POSTGRES_PASSWORD=/run/secrets/postgres_user_passwd
+#            - POSTGRES_PASSWORD=gitea
             - POSTGRES_DB=gitea
             - TZ=Asia/Kolkata
-#        secrets:
-#            - postgres_user_passwd
+        secrets:
+            - postgres_user_passwd
         security_opt:
             - label=disable
 
 secrets:
-        postgres_user_passwd:
-            external: true
+    postgres_user_passwd:
+        external: true
 
 # create dirs
 # mkdir -vp /trayimurti/containers/volumes/gitea/{db,root/{data,config}}
