--- a/nextcloud-compose.yml
+++ b/nextcloud-compose.yml
@@ -9,14 +9,14 @@ services:
         volumes:
             - /trayimurti/containers/volumes/nextcloud/db:/var/lib/mysql
         environment:
-            - MYSQL_ROOT_PASSWORD=/run/secrets/sql_root_passwd
-            - MYSQL_PASSWORD=/run/secrets/sql_user_passwd
+            - MYSQL_ROOT_PASSWORD=/run/secrets/nextcloud_db_root_passwd
+            - MYSQL_PASSWORD=/run/secrets/nextcloud_db_user_passwd
             - MYSQL_DATABASE=nextcloud
             - MYSQL_USER=nextcloud
             - TZ=Asia/Kolkata
         secrets:
-            - sql_root_passwd
-            - sql_user_passwd
+            - nextcloud_db_root_passwd
+            - nextcloud_db_user_passwd
         security_opt:
             - label=disable
 
@@ -31,25 +31,25 @@ services:
         volumes:
             - /trayimurti/containers/volumes/nextcloud/root:/var/www/html
         environment:
-            - MYSQL_PASSWORD=/run/secrets/sql_user_passwd
+            - MYSQL_PASSWORD=/run/secrets/nextcloud_db_user_passwd
             - MYSQL_DATABASE=nextcloud
             - MYSQL_USER=nextcloud
             - MYSQL_HOST=db
             - TZ=Asia/Kolkata
         secrets:
-            - sql_user_passwd
+            - nextcloud_db_user_passwd
         security_opt:
             - label=disable
 
 secrets:
-    sql_root_passwd:
+    nextcloud_db_root_passwd:
         external: true
-    sql_user_passwd:
+    nextcloud_db_user_passwd:
         external: true
 
 # create dirs
 # mkdir -vp /trayimurti/containers/volumes/nextcloud/{db,root}
 
 # create secrets
-# openssl rand -base64 20 | podman secret create sql_root_passwd -
-# openssl rand -base64 20 | podman secret create sql_user_passwd -
+# openssl rand -base64 20 | podman secret create nextcloud_db_root_passwd -
+# openssl rand -base64 20 | podman secret create nextcloud_db_user_passwd -
