fixed mistake in pihole and indented in pyload-ng

--- a/pihole-compoose.yml
+++ b/pihole-compoose.yml
@@ -9,7 +9,7 @@ services:
             - 53:53/udp
             - 8082:80/tcp
         environment:
-            TZ: Asia/Kolkata
+            - TZ: Asia/Kolkata
         volumes:
             - /trayimurti/containers/volumes/pi-hole/etc-pihole:/etc/pihole
             - /trayimurti/containers/volumes/pi-hole/etc-dnsmasq.d:/etc/dnsmasq.d
