--- a/new-nextcloud-compose.yml
+++ b/new-nextcloud-compose.yml
@@ -9,8 +9,8 @@ services:
             - db:/var/lib/mysql
         environment:
             - MYSQL_ROOT_PASSWORD=
-        env_file:
-            - db.env
+#        env_file:
+#            - db.env
 
     redis:
         image: redis:alpine
@@ -24,8 +24,8 @@ services:
         environment:
             - MYSQL_HOST=db
             - REDIS_HOST=redis
-        env_file:
-            - db.env
+#        env_file:
+#            - db.env
         depends_on:
             - db
             - redis
@@ -41,9 +41,6 @@ services:
             - LETSENCRYPT_EMAIL=
         depends_on:
             - app
-        networks:
-            - proxy-tier
-            - default
 
     cron:
         image: nextcloud:fpm-alpine
@@ -62,14 +59,12 @@ services:
             - 80:80
             - 443:443
         labels:
-        com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+            com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
         volumes:
             - certs:/etc/nginx/certs:ro
             - vhost.d:/etc/nginx/vhost.d
             - html:/usr/share/nginx/html
             - /var/run/docker.sock:/tmp/docker.sock:ro
-        networks:
-            - proxy-tier
 
     letsencrypt-companion:
         image: jrcs/letsencrypt-nginx-proxy-companion
@@ -79,7 +74,5 @@ services:
             - vhost.d:/etc/nginx/vhost.d
             - html:/usr/share/nginx/html
             - /var/run/docker.sock:/var/run/docker.sock:ro
-        networks:
-            - proxy-tier
         depends_on:
             - proxy
