--- a/nextcloud-compose.yml
+++ b/nextcloud-compose.yml
@@ -7,49 +7,45 @@ services:
         restart: always
         command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
         volumes:
-            - /trayimurti/containers/volumes/nextcloud/db:/var/lib/mysql
+            - /trayimurti/containers/volumes/nextcloud/db:/var/lib/mysql:Z
         environment:
-            - MYSQL_ROOT_PASSWORD=/run/secrets/nextcloud_db_root_passwd
-            - MYSQL_PASSWORD=/run/secrets/nextcloud_db_user_passwd
+            - MYSQL_ROOT_PASSWORD=/run/secrets/nextcloud_database_root_password
+            - MYSQL_PASSWORD=/run/secrets/nextcloud_database_user_password
             - MYSQL_DATABASE=nextcloud
             - MYSQL_USER=nextcloud
             - TZ=Asia/Kolkata
         secrets:
-            - nextcloud_db_root_passwd
-            - nextcloud_db_user_passwd
-        security_opt:
-            - label=disable
+            - nextcloud_database_root_password
+            - nextcloud_database_user_password
 
     app:
         image: nextcloud
         container_name: nextcloud-aarav
         restart: always
         ports:
-            - 8080:80
+            - 8010:80
         depends_on:
             - db
         volumes:
-            - /trayimurti/containers/volumes/nextcloud/root:/var/www/html
+            - /trayimurti/containers/volumes/nextcloud/root:/var/www/html:Z
         environment:
-            - MYSQL_PASSWORD=/run/secrets/nextcloud_db_user_passwd
+            - MYSQL_PASSWORD=/run/secrets/nextcloud_database_user_password
             - MYSQL_DATABASE=nextcloud
             - MYSQL_USER=nextcloud
             - MYSQL_HOST=db
             - TZ=Asia/Kolkata
         secrets:
-            - nextcloud_db_user_passwd
-        security_opt:
-            - label=disable
+            - nextcloud_database_user_password
 
 secrets:
-    nextcloud_db_root_passwd:
+    nextcloud_database_root_password:
         external: true
-    nextcloud_db_user_passwd:
+    nextcloud_database_user_password:
         external: true
 
 # create dirs
 # mkdir -vp /trayimurti/containers/volumes/nextcloud/{db,root}
 
 # create secrets
-# openssl rand -base64 20 | podman secret create nextcloud_db_root_passwd -
-# openssl rand -base64 20 | podman secret create nextcloud_db_user_passwd -
+# openssl rand -base64 20 | podman secret create nextcloud_database_root_password -
+# openssl rand -base64 20 | podman secret create nextcloud_database_user_password -
