--- a/hugo-thefossguy-machines-compose.yml
+++ b/hugo-thefossguy-machines-compose.yml
@@ -7,9 +7,9 @@ services:
         restart: always
         command: server
         ports:
-            - 8082:1313
+            - 8040:1313
         volumes:
-            - /trayimurti/containers/volumes/hugo/thefossguy-machines:/src
+            - /trayimurti/containers/volumes/hugo/thefossguy-machines:/src:Z
         environment:
             - TZ=Asia/Kolkata
         security_opt:
