--- a/hugo-thefossguy-machines-compose.yml
+++ b/hugo-thefossguy-machines-compose.yml
@@ -3,7 +3,7 @@ version: 3
 services:
     server:
         image: klakegg/hugo:alpine
-        container_name: hugo-thefossguy-machines
+        container_name: hugo-thefossguy-machines-mahayogi
         restart: always
         command: server
         ports:
@@ -14,3 +14,7 @@ services:
             - TZ=Asia/Kolkata
         security_opt:
             - label=disable
+
+# this image is not official, but is endorsed in a somewhat official capacity
+# https://discourse.gohugo.io/t/klakeggs-wonderful-hugo-docker-image-update-thread/20347
+# https://gohugo.io/getting-started/installing/#docker
