--- a/master-compose.yml
+++ b/master-compose.yml
@@ -86,6 +86,8 @@ services:
             - MYSQL_USER=nextcloud
             - MYSQL_HOST=nextcloud-db
             - NEXTCLOUD_TRUSTED_DOMAINS=cloud.thefossguy.com
+            - OVERWRITECLIURL=https://cloud.thefossguy.com
+            - OVERWRITEPROTOCOL=https
             - TZ=Asia/Kolkata
         depends_on:
             - nextcloud-db
@@ -154,7 +156,7 @@ secrets:
 # git clone git@gitlab.com:shivohamx3/machines.git /trayimurti/containers/volumes/mach
 # mkdir -vp /trayimurti/containers/volumes/{mach,blog}/content
 
-# podman pull docker.io/library/caddy:2-alpine docker.io/gitea/gitea:latest docker.io/library/postgres:alpine docker.io/klakegg/hugo:alpine docker.io/library/nextcloud docker.io/library/mariadb
+# podman pull docker.io/library/caddy:2-alpine && sleep 60 && podman pull docker.io/gitea/gitea:latest && sleep 60 && podman pull docker.io/klakegg/hugo:alpine && sleep 60 && podman pull docker.io/library/mariadb:latest && sleep 60 && podman pull docker.io/library/nextcloud:production && sleep 60 && podman pull docker.io/library/postgres:alpine && sleep 60
 
 # openssl rand -base64 20 | podman secret create gitea_database_user_password -
 # openssl rand -base64 20 | podman secret create nextcloud_database_user_password -
