replace 'security_opt' with ':Z'

--- a/extras/new-nextcloud-compose.yml
+++ b/extras/new-nextcloud-compose.yml
@@ -6,7 +6,7 @@ services:
         command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
         restart: always
         volumes:
-            - db:/var/lib/mysql
+            - db:/var/lib/mysql:Z
         environment:
             - MYSQL_ROOT_PASSWORD=
 #        env_file:
@@ -20,7 +20,7 @@ services:
         image: nextcloud:fpm-alpine
         restart: always
         volumes:
-            - nextcloud:/var/www/html
+            - nextcloud:/var/www/html:Z
         environment:
             - MYSQL_HOST=db
             - REDIS_HOST=redis
@@ -46,7 +46,7 @@ services:
         image: nextcloud:fpm-alpine
         restart: always
         volumes:
-            - nextcloud:/var/www/html
+            - nextcloud:/var/www/html:Z
         entrypoint: /cron.sh
         depends_on:
             - db
@@ -62,17 +62,17 @@ services:
             com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
         volumes:
             - certs:/etc/nginx/certs:ro
-            - vhost.d:/etc/nginx/vhost.d
-            - html:/usr/share/nginx/html
+            - vhost.d:/etc/nginx/vhost.d:Z
+            - html:/usr/share/nginx/html:Z
             - /var/run/docker.sock:/tmp/docker.sock:ro
 
     letsencrypt-companion:
         image: jrcs/letsencrypt-nginx-proxy-companion
         restart: always
         volumes:
-            - certs:/etc/nginx/certs
-            - vhost.d:/etc/nginx/vhost.d
-            - html:/usr/share/nginx/html
+            - certs:/etc/nginx/certs:Z
+            - vhost.d:/etc/nginx/vhost.d:Z
+            - html:/usr/share/nginx/html:Z
             - /var/run/docker.sock:/var/run/docker.sock:ro
         depends_on:
             - proxy
