--- a/master-compose.yml
+++ b/master-compose.yml
@@ -30,8 +30,9 @@ services:
             - 8010:3000
             - 8011:2222
         volumes:
-            - /trayimurti/containers/volumes/gitea/web/data:/var/lib/gitea:Z
-            - /trayimurti/containers/volumes/gitea/web/config:/etc/gitea:Z
+            - /trayimurti/containers/volumes/gitea/web:/data:Z
+#            - /trayimurti/containers/volumes/gitea/web/data:/var/lib/gitea:Z
+#            - /trayimurti/containers/volumes/gitea/web/config:/etc/gitea:Z
             - /etc/localtime:/etc/localtime:ro
         environment:
             - ROOT_URL=https://git.thefossguy.com
@@ -79,7 +80,7 @@ services:
         ports:
             - 8030:80
         volumes:
-            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:Z
+            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:z
         environment:
             - POSTGRES_PASSWORD=/run/secrets/nextcloud_database_user_password
             - POSTGRES_DB=nextcloud
@@ -110,11 +111,11 @@ services:
 
     nextcloud-cron:
         image: nextcloud:production
-        container_name: nextcloud-kama
+        container_name: nextcloud-karma
         restart: always
         entrypoint: /cron.sh
         volumes:
-            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:Z
+            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:z
         environment:
             - TZ=Asia/Kolkata
         depends_on:
