--- a/master-compose.yml
+++ b/master-compose.yml
@@ -48,6 +48,8 @@ services:
             - GITEA__database__NAME=gitea
             - GITEA__database__USER=gitea
             - GITEA__database__PASSWD=/run/secrets/gitea_database_user_password
+            - GITEA__service__DISABLE_REGISTRATION=true
+            - DISABLE_SSH=false
             - TZ=Asia/Kolkata
         depends_on:
             - gitea-db
